--- a/index.html
+++ b/index.html
@@ -1870,7 +1870,7 @@
             mainContent.innerHTML = `
                 <div class="max-w-6xl w-full mx-auto space-y-8">
                     <div class="flex justify-between items-center mb-6">
-                        <h1 class="text-3xl font-extrabold text-gray-900">Mes Projets et Interventions</h1>
+                        <h1 class="text-3xl font-extrabold text-gray-900">Ma commune</h1>
                         <button onclick="window.openInfoModal('Aide Projets', '<h2>TEST Mes Projets</h2><p>Ceci est le texte d\'information de la page 'Mes Projets'.</p>')" 
                                 class="apple-button-secondary p-2 rounded-full shadow-md hover:shadow-lg transition-shadow duration-300">
                             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
